fixed some alignment in these two pages and gave some space

--- a/frontend/src/app/pages/fridge_recipe/fridge_recipe.component.scss
+++ b/frontend/src/app/pages/fridge_recipe/fridge_recipe.component.scss
@@ -1,6 +1,6 @@
 .main-container {
   display: flex;
-  height: 46vh; // Set the main container to full viewport height
+  height: 60vh; // Set the main container to full viewport height
   width: 100%; // Set the main container to full width of the viewport
   margin: 0; // Reset any default margin
 
